# ffts

./: .gitignore  CMakeLists.txt  README.md
python/: complex1d.py  real1d.py  realnd.py
src/: CMakeLists.txt  constants.f90  fft.f90  fft_utils.f90  fftw3_interface.F90  test_functions.f90
test/: CMakeLists.txt  complex1d.f90  real1d.f90
